[gd_scene load_steps=2 format=3 uid="uid://bbld8wt33y8im"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_gm210"]

[node name="Pause" type="Control"]
z_index = 30
layout_mode = 3
anchors_preset = 0
mouse_default_cursor_shape = 7
script = ExtResource("1_gm210")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 7
color = Color(0.266667, 0.266667, 0.266667, 0.513726)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 7
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -165.0
offset_right = 100.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 7
theme_override_constants/v_separation = 15

[node name="Retomar" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Retomar"

[node name="Opcoes" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Opções"

[node name="Voltar" type="Button" parent="ColorRect/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Voltar"

[connection signal="pressed" from="ColorRect/GridContainer/Retomar" to="." method="_on_retomar_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/Voltar" to="." method="_on_voltar_pressed"]
